# csv_labeler

./: .flake8  .gitignore  LICENSE  README.md  README.rst  config.ini  mypy.ini  noxfile.py  pylintrc  pyproject.toml  pytype.cfg  requirements.txt
csv_labeler/: main.py  tab_completer.py
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
src/: __init__.py  main.py
tests/: __init__.py  test_csv_labeler.py  test_input_methods.py  test_partial_label_detection.py  test_word_highlighting.py
