[tool.poetry]
name = "csv_labeler"
version = "0.1.0"
description = ""
authors = ["Robin Maasjosthusmann <robin@maasjosthusmann.de>"]

[tool.poetry.dependencies]
python = ">=3.6,<3.10"
pandas = "^1.3.4"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.2.1"
black = "^21.9b0"
nox = "^2021.10.1"
flake8-docstrings = "^1.6.0"
pylint = "^2.11.1"
mypy = "^0.910"
safety = "^1.10.3"
pytype = "^2021.10.25"
pytest = "^6.2.5"
coverage = "^6.0.2"
pytest-timeout = "^2.0.1"
pytest-cov = "^3.0.0"
pytest-mock = "^3.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
