[tool.poetry]
authors = ["Robin Maasjosthusmann <robin@maasjosthusmann.de>"]
description = "A simple tool for labeling your csv files"
name = "csv_labeler"
version = "0.1.0"

[tool.poetry.scripts]
csv_labeler = "csv_labeler.main:main"
tab = "csv_labeler.tab_completer:main"

[tool.poetry.dependencies]
colorama = "^0.4.4"
fast-autocomplete = {extras = ["levenshtein"], version = "^0.9.0"}
loguru = "^0.5.3"
pandas = "^1.3.4"
pytest-parametrization = "^2019.1.4"
python = ">=3.7.1,<=3.9.7"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
coverage = "^6.0.2"
flake8-docstrings = "^1.6.0"
jupyterlab = "^3.2.1"
mypy = "^0.910"
nox = "^2021.10.1"
pylint = "^2.11.1"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
pytest-mock = "^3.6.1"
pytest-timeout = "^2.0.1"
pytype = "^2021.10.25"
safety = "^1.10.3"
isort = "^5.10.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
